IHM manque le build et le run